[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satprep"
version = "0.1.0"
description = "Satellite image preprocessing and quality control for deep learning workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "satprep contributors"}]
keywords = ["satellite", "geospatial", "raster", "deep-learning", "preprocessing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.23",
  "rasterio>=1.3",
  "shapely>=2.0",
  "pyproj>=3.4",
  "pandas>=1.5",
  "pillow>=9.0",
  "opencv-python>=4.7",
  "tqdm>=4.64",
  "typer>=0.9",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
deep = ["torch", "torchvision", "super-image>=0.2.0"]
han = ["super-image>=0.2.0"]
stac = ["pystac-client", "stackstac"]
scale = ["xarray", "dask"]

[project.scripts]
satprep = "satprep.cli.main:app"

[tool.setuptools.packages.find]
include = ["satprep*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
